--- a/style.css
+++ b/style.css
@@ -73,20 +73,21 @@ img {
 }
 
 @media screen and (max-width: 420px) {
-  #lezioni > .row .left,
-  #lezioni > .row .right,
-  #steps > .row .left,
-  #steps > .row .central,
-  #steps > .row .right {
-    width: 100%;
-    float: none;
-  }
 
   .row {
     width: 100%;
     margin: 0;
   }
-  .row > * {
+  
+  #lezioni > .row > .left,
+  #lezioni > .row > .right,
+  #steps > .row > .left,
+  #steps > .row > .right,
+  #steps > .row > .central,
+  #why > .row > .first,
+  #why > .row > .second,
+  #why > .row > .third {
+    width: 100%;
     float: none;
   }
 
