--- a/style.css
+++ b/style.css
@@ -84,8 +84,8 @@ img {
   }
 
   .row {
-    width: 100%;
-    margin: 0;
+    width: 95%;
+    margin: 0 auto;
     padding-top: 5px;
   }
   
@@ -101,6 +101,7 @@ img {
     float: none;
     margin: 0;
     margin-top: 10px;
+    font-size: 14px;
   }
 
   .container:nth-child(odd) {
@@ -113,8 +114,18 @@ img {
   h1 {
     font-size: 24px;
   }
+  h3 {
+    font-size: 16px;
+  }
 
   .row img {
     height: 100px;
+  }
+
+  hr {
+    width: 95%;
+    margin: 0 auto;
+    border: 0.5px solid black;
+    opacity: 0.4;
   }
 }
